--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>GifTastic!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
     <form id="artistContainer">
         <label for="artistInput">Add An Artist!</label><br>
         <input type="text" id="artistInput"><br>
-        <input id="addArtist" type="submit" value="Add An Artist!">
+        <input id="addArtist" type="submit" value="Add Now!">
     </form>
 </div>
 <div id="gifContainer"></div>
