--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <form id="artistContainer">
         <label for="artistInput">Add An Artist!</label><br>
         <input type="text" id="artistInput"><br>
-        <input id="addArtist" type="submit" value="Add Now!">
+        <input id="addArtist" type="submit" value="Add New">
     </form>
 </div>
 <div id="gifContainer"></div>
